fix: remove bloat from plugin 2